# RomanParser

./: CMakeLists.txt
gui/: CMakeLists.txt
gui/include/converter/: mainwindow.hpp
gui/src/converter/: main.cpp  mainwindow.cpp
gui/ui/converter/: mainwindow.ui
lib/: CMakeLists.txt
lib/include/: analyze.hpp  number_info.hpp  number_type.hpp  rule.hpp  tokenize.hpp
lib/src/: analyze.cpp  number_info.cpp  number_type.cpp
test/: CMakeLists.txt
test/src/: analyze_tests.cpp  main.cpp  number_100_900_tests.cpp  number_10_19_tests.cpp  number_1_9_tests.cpp  number_20_90_tests.cpp  tokenize_tests.cpp
